finished padding/margin

--- a/app/index.html
+++ b/app/index.html
@@ -320,7 +320,8 @@
         <span class="text-highlight-yellow">border-style-@style</span> <br/><b>#</b> change the border style, supports all ten styles
       </div>
     </div>
-<!-- Buttons -->
+
+<!-- Margin & Padding -->
     <div class="row marginTop40">
       <div class="col-xs-12">
         <h3 class="text-bold text-underline">Margin & Padding</h3>
@@ -360,6 +361,20 @@
       </div>
       <div class="col-xs-3 code-block-alt">
         &lt;div class="<b>paddingTop20</b>"&gt;<br/>&lt;/div&gt;
+      </div>
+    </div>
+    <div class="row marginTop20 paddingLeft20 paddingRight20  text-bold">
+      <div class="col-xs-3">
+        <span class="text-highlight-yellow">margin@size</span><br/> <b>#</b> apply even margin 0px to 50px
+      </div>
+      <div class="col-xs-3 ">
+        <span class="text-highlight-yellow">margin@side@size</span> <br/> <b>#</b>apply margin to specific side of given size: top,left,right,bottom
+      </div>
+      <div class="col-xs-3 ">
+        <span class="text-highlight-yellow">padding@value</span><br/> <b>#</b> apply even padding to element between 0px to 50px
+      </div>
+      <div class="col-xs-3">
+        <span class="text-highlight-yellow">padding@side@size</span> <br/> <b>#</b>apply padding to specific side of given size: top,left,right,bottom
       </div>
     </div>
   </div>
