--- a/app/index.html
+++ b/app/index.html
@@ -377,6 +377,26 @@
         <span class="text-highlight-yellow">padding@side@size</span> <br/> <b>#</b>apply padding to specific side of given size: top,left,right,bottom
       </div>
     </div>
+
+<!-- Buttons -->
+    <div class="row marginTop40">
+      <div class="col-xs-12">
+        <h3 class="text-bold text-underline">Buttons</h3>
+      </div>
+    </div>
+    <div class="row paddingLeft20 paddingRight20">
+    <div class="col-xs-12">
+      <button class="marginRight10 btn">Simple</button>
+      <button class="marginRight10 btn btn-cta bg-blue text-white bg-hover">Call To Action</button>
+      <button class="marginRight10 btn btn-curved">!</button>
+      <button class="marginRight10 btn btn-circle">circle</button>
+      <button class="marginRight10 btn btn-hover-down">Hover Down</button>
+      <button class="marginRight10 btn btn-hover-up">Hover Up</button>
+      <button class="marginRight10 btn btn-shadow">Shadow</button>
+      <button class="marginRight10 btn btn-hover-slide-left">Hover Slide Left</button>
+      <button class="marginRight10 btn btn-hover-slide-right">Hover Slide Right</button>
+
+    </div>
   </div>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
