--- a/app/index.html
+++ b/app/index.html
@@ -50,15 +50,15 @@
       </div>
       <div class="row">
         <div class="col-xs-12 text-center">
-          <div class="text-hover  marginRight4 bg-hover bg-yellow paddingTop40 square text-gray">yellow</div>
-          <div class="text-hover marginRight4 bg-hover bg-green paddingTop40  square text-white">green</div>
-          <div class="text-hover marginRight4 bg-hover bg-teal paddingTop40  square text-white">teal</div>
-          <div class="text-hover marginRight4 bg-hover bg-blue paddingTop40  square text-white">blue</div>
-          <div class="text-hover marginRight4 bg-hover bg-purple paddingTop40  square text-white">purple</div>
-          <div class="text-hover marginRight4 bg-hover bg-pink paddingTop40  square text-white">pink</div>
-          <div class="text-hover marginRight4 bg-hover bg-red paddingTop40  square text-white">red</div>
-          <div class="text-hover marginRight4 bg-hover bg-orange paddingTop40  square text-white">orange</div>
-          <div class="text-hover marginRight4 bg-hover bg-gray paddingTop40  square text-white">gray</div>
+          <div class="text-hover  marginRight4 bg-hover bg-yellow paddingTop40 square-small square text-gray">yellow</div>
+          <div class="text-hover marginRight4 bg-hover bg-green paddingTop40 square-small  square text-white">green</div>
+          <div class="text-hover marginRight4 bg-hover bg-teal paddingTop40 square-small  square text-white">teal</div>
+          <div class="text-hover marginRight4 bg-hover bg-blue paddingTop40 square-small  square text-white">blue</div>
+          <div class="text-hover marginRight4 bg-hover bg-purple paddingTop40 square-small  square text-white">purple</div>
+          <div class="text-hover marginRight4 bg-hover bg-pink paddingTop40 square-small  square text-white">pink</div>
+          <div class="text-hover marginRight4 bg-hover bg-red paddingTop40 square-small  square text-white">red</div>
+          <div class="text-hover marginRight4 bg-hover bg-orange paddingTop40 square-small  square text-white">orange</div>
+          <div class="text-hover marginRight4 bg-hover bg-gray paddingTop40 square-small  square text-white">gray</div>
        </div>
       </div>
       <div class="row paddingLeft20 paddingRight20 paddingTop20">
@@ -384,18 +384,54 @@
         <h3 class="text-bold text-underline">Buttons</h3>
       </div>
     </div>
-    <div class="row paddingLeft20 paddingRight20">
-    <div class="col-xs-12">
-      <button class="marginRight10 btn">Simple</button>
-      <button class="marginRight10 btn btn-cta bg-blue text-white bg-hover">Call To Action</button>
-      <button class="marginRight10 btn btn-curved">!</button>
-      <button class="marginRight10 btn btn-circle">circle</button>
-      <button class="marginRight10 btn btn-hover-down">Hover Down</button>
-      <button class="marginRight10 btn btn-hover-up">Hover Up</button>
-      <button class="marginRight10 btn btn-shadow">Shadow</button>
-      <button class="marginRight10 btn btn-hover-slide-left">Hover Slide Left</button>
-      <button class="marginRight10 btn btn-hover-slide-right">Hover Slide Right</button>
-
+    <div class="row marginTop10 paddingRight20">
+      <div class="col-xs-12">
+        <button class="marginRight10 btn">Simple</button>
+        <button class="marginRight10 btn btn-cta bg-blue text-white bg-hover">Call To Action</button>
+      </div>
+    </div>
+<!-- Hover Animations -->
+    <div class="row marginTop40">
+      <div class="col-xs-12">
+        <h3 class="text-bold text-underline">CSS Animations</h3>
+      </div>
+    </div>
+    <div class="row marginTop10 paddingRight20">
+      <div class="col-xs-12">
+        <button class="marginRight10 btn hover-slide-left"> Slide Left</button>
+        <button class="marginRight10 btn hover-slide-left slide-far"> Slide Far (Left)</button>
+        <button class="marginRight10 btn hover-slide-right"> Slide Right</button>
+        <button class="marginRight10 btn hover-slide-right slide-far"> Slide Far (Right)</button>
+        <button class="marginRight10 btn hover-down">Scale Down</button>
+        <button class="marginRight10 btn hover-up">Scale Up</button>
+        <button class="marginRight10 btn hover-heart-beat">Heart Beat</button>
+      </div>
+    </div>
+    <div class="row marginTop10 paddingRight20">
+      <div class="col-xs-12">
+        <button class="marginRight10 btn hover-teeter">Teeter</button>
+        <button class="marginRight10 btn hover-spin">Spin</button>
+        <button class="marginRight10 btn hover-wiggle">Wiggle</button>
+        <button class="marginRight10 btn">Shake</button>
+        <button class="marginRight10 btn">Flip</button>
+        <button class="marginRight10 btn">Flash Color</button>
+        <button class="marginRight10 btn">Change Color</button>
+        <button class="marginRight10 btn">Lose Background</button>
+        <button class="marginRight10 btn">Leaf</button>
+      </div>
+    </div>
+<!-- Applied Science -->
+    <div class="row marginTop40">
+      <div class="col-xs-12">
+        <h3 class="text-bold text-underline">Applied Science</h3>
+      </div>
+    </div>
+    <div class="row marginTop10 paddingRight20">
+      <div class="col-xs-12">
+        <button class="marginRight10 btn curved">!</button>
+        <button class="marginRight10 btn circle">!</button>
+        <button class="marginRight10 btn shadow">Shadow</button>
+      </div>
     </div>
   </div>
     <!-- build:js scripts/vendor.js -->
