--- a/app/index.html
+++ b/app/index.html
@@ -386,7 +386,7 @@
     </div>
     <div class="row marginTop10 paddingRight20">
       <div class="col-xs-12">
-        <button class="marginRight10 btn">Simple</button>
+        Coming soon...
       </div>
     </div>
 <!-- Hover Animations -->
