--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <title>failboat</title>
 
     <!-- Place favicon.ico in the root directory -->
-    <link href='http://fonts.googleapis.com/css?family=Jura:100,400,600,900' rel='stylesheet' type='text/css'>
+    <!--<link href='http://fonts.googleapis.com/css?family=Jura:100,400,600,900' rel='stylesheet' type='text/css'>-->
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
@@ -408,7 +408,7 @@
     </div>
     <div class="row marginTop10 paddingRight20">
       <div class="col-xs-12">
-        <button class="marginRight10 btn hover-teeter">Teeter</button>
+        <button class="marginRight10 btn teeter">Teeter</button>
         <button class="marginRight10 btn hover-spin">Spin</button>
         <button class="marginRight10 btn hover-wiggle">Wiggle</button>
         <button class="marginRight10 btn">Shake</button>
