--- a/app/index.html
+++ b/app/index.html
@@ -408,7 +408,7 @@
     </div>
     <div class="row marginTop10 paddingRight20">
       <div class="col-xs-12">
-        <button class="marginRight10 btn teeter">Teeter</button>
+        <button class="marginRight10 btn hover-teeter">Teeter</button>
         <button class="marginRight10 btn hover-spin">Spin</button>
         <button class="marginRight10 btn hover-wiggle">Wiggle</button>
         <button class="marginRight10 btn">Shake</button>
