--- a/app/index.html
+++ b/app/index.html
@@ -411,7 +411,7 @@
         <button class="marginRight10 btn hover-teeter">Teeter</button>
         <button class="marginRight10 btn hover-spin">Spin</button>
         <button class="marginRight10 btn hover-wiggle">Wiggle</button>
-        <button class="marginRight10 btn">Shake</button>
+        <button class="marginRight10 btn hover-shake">Shake</button>
         <button class="marginRight10 btn">Flip</button>
         <button class="marginRight10 btn">Flash Color</button>
         <button class="marginRight10 btn">Change Color</button>
