--- a/app/index.html
+++ b/app/index.html
@@ -412,8 +412,9 @@
         <button class="marginRight10 btn hover-spin">Spin</button>
         <button class="marginRight10 btn hover-wiggle">Wiggle</button>
         <button class="marginRight10 btn hover-shake">Shake</button>
-        <button class="marginRight10 btn">Flip</button>
-        <button class="marginRight10 btn">Flash Color</button>
+        <button class="marginRight10 btn hover-flip-up">Flip Up</button>
+        <button class="marginRight10 btn hover-flip-card">Card Flip</button>
+        <button class="marginRight10 btn hover-flash-color">Flash Color</button>
         <button class="marginRight10 btn">Change Color</button>
         <button class="marginRight10 btn">Lose Background</button>
         <button class="marginRight10 btn">Leaf</button>
