--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <title>failboat</title>
 
     <!-- Place favicon.ico in the root directory -->
-    <!--<link href='http://fonts.googleapis.com/css?family=Jura:100,400,600,900' rel='stylesheet' type='text/css'>-->
+    <link href='http://fonts.googleapis.com/css?family=Jura:100,400,600,900' rel='stylesheet' type='text/css'>
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
@@ -403,21 +403,19 @@
         <button class="marginRight10 btn hover-slide-right slide-far"> Slide Far (Right)</button>
         <button class="marginRight10 btn hover-down">Scale Down</button>
         <button class="marginRight10 btn hover-up">Scale Up</button>
-        <button class="marginRight10 btn hover-heart-beat">Heart Beat</button>
+        
       </div>
     </div>
     <div class="row marginTop10 paddingRight20">
       <div class="col-xs-12">
+        <button class="marginRight10 btn hover-heart-beat">Heart Beat</button>
         <button class="marginRight10 btn hover-teeter">Teeter</button>
         <button class="marginRight10 btn hover-spin">Spin</button>
-        <button class="marginRight10 btn hover-wiggle">Wiggle</button>
+        <button class="marginRight10 btn hover-bell">Bell</button>
         <button class="marginRight10 btn hover-shake">Shake</button>
-        <button class="marginRight10 btn hover-flip-up">Flip Up</button>
-        <button class="marginRight10 btn hover-flip-card">Card Flip</button>
-        <button class="marginRight10 btn hover-flash-color">Flash Color</button>
-        <button class="marginRight10 btn">Change Color</button>
-        <button class="marginRight10 btn">Lose Background</button>
-        <button class="marginRight10 btn">Leaf</button>
+        <button class="marginRight10 btn hover-flip">Flip</button>
+        <button class="marginRight10 btn hover-flip-card">Flip Card</button>
+        <button class="marginRight10 btn leaf">Leaf</button>
       </div>
     </div>
 <!-- Applied Science -->
@@ -431,6 +429,9 @@
         <button class="marginRight10 btn curved">!</button>
         <button class="marginRight10 btn circle">!</button>
         <button class="marginRight10 btn shadow">Shadow</button>
+        <button class="marginRight10 btn hover-color-pink">Color</button>
+        <button class="marginRight10 btn hover-color-slow-pink">Slow Color</button>
+        <button class="marginRight10 btn hover-lose-background">Lose Background</button>
       </div>
     </div>
   </div>
