--- a/app/index.html
+++ b/app/index.html
@@ -403,7 +403,6 @@
         <button class="marginRight10 btn hover-slide-right slide-far"> Slide Far (Right)</button>
         <button class="marginRight10 btn hover-down">Scale Down</button>
         <button class="marginRight10 btn hover-up">Scale Up</button>
-        
       </div>
     </div>
     <div class="row marginTop10 paddingRight20">
@@ -426,8 +425,8 @@
     </div>
     <div class="row marginTop10 paddingRight20">
       <div class="col-xs-12">
-        <button class="marginRight10 btn curved">!</button>
-        <button class="marginRight10 btn circle">!</button>
+        <button class="marginRight10 btn curved">curved</button>
+        <button class="marginRight10 btn circle circle-smallest">circle</button>
         <button class="marginRight10 btn shadow">Shadow</button>
         <button class="marginRight10 btn hover-color-pink">Color</button>
         <button class="marginRight10 btn hover-color-slow-pink">Slow Color</button>
