--- a/app/index.html
+++ b/app/index.html
@@ -401,36 +401,91 @@
         <button class="marginRight10 btn hover-slide-left slide-far"> Slide Far (Left)</button>
         <button class="marginRight10 btn hover-slide-right"> Slide Right</button>
         <button class="marginRight10 btn hover-slide-right slide-far"> Slide Far (Right)</button>
-        <button class="marginRight10 btn hover-down">Scale Down</button>
-        <button class="marginRight10 btn hover-up">Scale Up</button>
+        <button class="marginRight10 btn hover-slide-down"> Slide Down</button>
+        <button class="marginRight10 btn hover-slide-down slide-far"> Slide Far (Down)</button>
+        <button class="marginRight10 btn hover-slide-up"> Slide Up</button>
+        <button class="marginRight10 btn hover-slide-up slide-far"> Slide Far (Up)</button>
       </div>
     </div>
     <div class="row marginTop10 paddingRight20">
       <div class="col-xs-12">
-        <button class="marginRight10 btn hover-heart-beat">Heart Beat</button>
+        <button class="marginRight10 btn hover-down">Scale Down</button>
+        <button class="marginRight10 btn hover-up">Scale Up</button>
+        <button class="marginRight10 btn hover-pulse">Pulse</button>
         <button class="marginRight10 btn hover-teeter">Teeter</button>
         <button class="marginRight10 btn hover-spin">Spin</button>
         <button class="marginRight10 btn hover-bell">Bell</button>
         <button class="marginRight10 btn hover-shake">Shake</button>
         <button class="marginRight10 btn hover-flip">Flip</button>
         <button class="marginRight10 btn hover-flip-card">Flip Card</button>
-        <button class="marginRight10 btn leaf">Leaf</button>
       </div>
     </div>
+    <div class="row paddingLeft20 paddingRight20 paddingTop20">
+        <div class="col-xs-3  marginTop20">
+          <div class="marginTop50 code-block-alt">
+           &lt;div class="<b>slide-far<br/>hover-slide-left</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;Slide Far(left)<br/>&lt;/div&gt;
+          </div>
+        </div>
+        <div class="col-xs-1 marginTop50 text-size30 text-bold text-center">
+          <div class="marginTop50">></div>
+        </div>
+        <div class="col-xs-8 ">
+          <div class="row marginTop20">
+            <div class="col-xs-12 lineHeight150">
+              All animations support both on hover & direct class. Note: hover will enable the animation for 1 loop. Direct class will animation on infinite loop, utilize javascript<br/><br/>
+              <span class="text-highlight-yellow">hover-@animationClass</span> <b>#</b> prefix modifier for any animation to enable hover only effects.<Br/>
+              <span class="text-highlight-yellow">slide-@direction</span> <b>#</b> add the left/right/up/down direction for sliding element<Br/>
+              <span class="text-highlight-teal marginLeft47">slide-far</span> <b>#</b> modifier for slide-@direction slide length/duration longer<Br/>
+              <span class="text-highlight-yellow">scale-@size</span> <b>#</b> enables element to grow or shrink using up/down for @size<br/>
+              <span class="text-highlight-yellow">spin</span> <b>#</b> enables element to spin<br/>
+              <span class="text-highlight-yellow">teeter</span> <b>#</b> element will dip right and bounce back into position<br/>
+              <span class="text-highlight-yellow">bell</span> <b>#</b> element will mimic lifting and shaking a bell<br/>
+              <span class="text-highlight-yellow">shake</span> <b>#</b> cause element to shake right then left<br/>
+              <span class="text-highlight-yellow">flip</span> <b>#</b> vertically 'flip' an element, example usage transitions<br/>
+              <span class="text-highlight-yellow">flip-card</span> <b>#</b> horizontally 'flip' an element, example usage transitions<br/>
+            </div>
+          </div>
+      </div>
 <!-- Applied Science -->
     <div class="row marginTop40">
       <div class="col-xs-12">
         <h3 class="text-bold text-underline">Applied Science</h3>
       </div>
     </div>
-    <div class="row marginTop10 paddingRight20">
+    <div class="row marginTop10 ">
       <div class="col-xs-12">
+        <button class="marginRight10 btn square square-smallest text-size12">square</button>
+        <button class="marginRight10 btn circle circle-smallest text-size12">circle</button>
         <button class="marginRight10 btn curved">curved</button>
-        <button class="marginRight10 btn circle circle-smallest">circle</button>
         <button class="marginRight10 btn shadow">Shadow</button>
         <button class="marginRight10 btn hover-color-pink">Color</button>
         <button class="marginRight10 btn hover-color-slow-pink">Slow Color</button>
         <button class="marginRight10 btn hover-lose-background">Lose Background</button>
+        <button class="marginRight10 btn hover-lose-grad-background">Garient Lose Background</button>
+      </div>
+    </div>
+    <div class="row paddingLeft20 paddingRight20 paddingTop20">
+        <div class="col-xs-4 code-block-alt">
+          &lt;div class="<b>bg-yellow</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;yellow<br/>&lt;/div&gt;
+        </div>
+        <div class="col-xs-1 marginTop30 text-size30 text-bold text-center">
+          >
+        </div>
+        <div class="col-xs-7 ">
+          <div class="row marginTop20">
+            <div class="col-xs-12 lineHeight150">
+              Color list also includes: white, whitish, black, blackish<br/>
+              <span class="text-highlight-yellow">bg-@color</span> <b>#</b> uadd color keyword listed above to change background color. <Br/>
+              <span class="text-highlight-yellow">bg-hover</span> <b>#</b> enables background to darken on hover<br/>
+            </div>
+          </div>
+      </div>
+    <div class="row marginTop10">
+      <div class="col-xs-6">
+
+      </div>
+      <div class="col-xs-6">
+        
       </div>
     </div>
   </div>
