--- a/app/index.html
+++ b/app/index.html
@@ -409,19 +409,22 @@
     </div>
     <div class="row marginTop10 paddingRight20">
       <div class="col-xs-12">
-        <button class="marginRight10 btn hover-down">Scale Down</button>
-        <button class="marginRight10 btn hover-up">Scale Up</button>
-        <button class="marginRight10 btn hover-pulse">Pulse</button>
-        <button class="marginRight10 btn hover-teeter">Teeter</button>
-        <button class="marginRight10 btn hover-spin">Spin</button>
-        <button class="marginRight10 btn hover-bell">Bell</button>
-        <button class="marginRight10 btn hover-shake">Shake</button>
-        <button class="marginRight10 btn hover-flip">Flip</button>
-        <button class="marginRight10 btn hover-flip-card">Flip Card</button>
+        <button class="marginBottom10 marginRight10 btn hover-down">Scale Down</button>
+        <button class="marginBottom10 marginRight10 btn hover-up">Scale Up</button>
+        <button class="marginBottom10 marginRight10 btn hover-pulse">Pulse</button>
+        <button class="marginBottom10 marginRight10 btn hover-teeter">Teeter</button>
+        <button class="marginBottom10 marginRight10 btn hover-spin">Spin</button>
+        <button class="marginBottom10 marginRight10 btn hover-bell">Bell</button>
+        <button class="marginBottom10 marginRight10 btn hover-shake">Shake</button>
+        <button class="marginBottom10 marginRight10 btn hover-flip">Flip</button>
+        <button class="marginBottom10 marginRight10 btn hover-flip-card">Flip Card</button>
+        <button class="marginBottom10 marginRight10 btn hover-color-pink">Color</button>
+        <button class="marginBottom10 marginRight10 btn hover-color-slow-pink">Slow Color</button>
+        <button class="marginBottom10 marginRight10 btn hover-lose-background">Lose Background</button>
       </div>
     </div>
-    <div class="row paddingLeft20 paddingRight20 paddingTop20">
-        <div class="col-xs-3  marginTop20">
+    <div class="row paddingLeft20 paddingRight20 ">
+        <div class="col-xs-3  ">
           <div class="marginTop50 code-block-alt">
            &lt;div class="<b>slide-far<br/>hover-slide-left</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;Slide Far(left)<br/>&lt;/div&gt;
           </div>
@@ -443,6 +446,9 @@
               <span class="text-highlight-yellow">shake</span> <b>#</b> cause element to shake right then left<br/>
               <span class="text-highlight-yellow">flip</span> <b>#</b> vertically 'flip' an element, example usage transitions<br/>
               <span class="text-highlight-yellow">flip-card</span> <b>#</b> horizontally 'flip' an element, example usage transitions<br/>
+              <span class="text-highlight-yellow">color-@color</span> <b>#</b> change elements color to any of our colors by name<br/>
+              <span class="text-highlight-yellow">color-slow-@color</span> <b>#</b> slowly change elements color to any of our colors by name<br/>
+              <span class="text-highlight-yellow">lose-background</span> <b>#</b> slow fading of background to 0 opacity<br/>
             </div>
           </div>
       </div>
@@ -457,37 +463,40 @@
         <button class="marginRight10 btn square square-smallest text-size12">square</button>
         <button class="marginRight10 btn circle circle-smallest text-size12">circle</button>
         <button class="marginRight10 btn curved">curved</button>
+        <button class="marginRight10 btn curved-heavy">curved-heavy</button>
+        <button class="marginRight10 btn curved-light">curved-light</button>
         <button class="marginRight10 btn shadow">Shadow</button>
-        <button class="marginRight10 btn hover-color-pink">Color</button>
-        <button class="marginRight10 btn hover-color-slow-pink">Slow Color</button>
-        <button class="marginRight10 btn hover-lose-background">Lose Background</button>
-        <button class="marginRight10 btn hover-lose-grad-background">Garient Lose Background</button>
       </div>
     </div>
-    <div class="row paddingLeft20 paddingRight20 paddingTop20">
-        <div class="col-xs-4 code-block-alt">
-          &lt;div class="<b>bg-yellow</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;yellow<br/>&lt;/div&gt;
+    <div class="col-xs-3  marginTop20">
+          <div class="marginTop50 code-block-alt">
+           &lt;div class="<b>slide-far<br/>hover-slide-left</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;Slide Far(left)<br/>&lt;/div&gt;
+          </div>
         </div>
-        <div class="col-xs-1 marginTop30 text-size30 text-bold text-center">
-          >
+        <div class="col-xs-1 marginTop50 text-size30 text-bold text-center">
+          <div class="marginTop50">></div>
         </div>
-        <div class="col-xs-7 ">
+        <div class="col-xs-8 ">
           <div class="row marginTop20">
             <div class="col-xs-12 lineHeight150">
-              Color list also includes: white, whitish, black, blackish<br/>
-              <span class="text-highlight-yellow">bg-@color</span> <b>#</b> uadd color keyword listed above to change background color. <Br/>
-              <span class="text-highlight-yellow">bg-hover</span> <b>#</b> enables background to darken on hover<br/>
-            </div>
+              <span class="text-highlight-yellow">square</span> <b>#</b> enable element to take square-ish shape. by default min 75px by 75px<Br/>
+              <span class="text-highlight-teal marginLeft47">square-smallest</span> <b>#</b> change min to 50px by 50px<Br/>
+              <span class="text-highlight-teal marginLeft47">square-small</span> <b>#</b> change min to 100px by 100px<Br/>
+              <span class="text-highlight-teal marginLeft47">square-medium</span> <b>#</b> change min to 250px by 250px<Br/>
+              <span class="text-highlight-teal marginLeft47">square-large</span> <b>#</b> change min to 400px by 400px<Br/>
+              <span class="text-highlight-teal marginLeft47">square-giant</span> <b>#</b> change min to 700px by 700px<Br/>
+              <span class="text-highlight-yellow">circle</span> <b>#</b> enable element to take circle-ish shape. by default min 33px by 33px<Br/>
+              <span class="text-highlight-teal marginLeft47">circle-smallest</span> <b>#</b> change min to 50px by 50px<Br/>
+              <span class="text-highlight-teal marginLeft47">circle-small</span> <b>#</b> change min to 100px by 100px<Br/>
+              <span class="text-highlight-teal marginLeft47">circle-medium</span> <b>#</b> change min to 250px by 250px<Br/>
+              <span class="text-highlight-teal marginLeft47">circle-large</span> <b>#</b> change min to 400px by 400px<Br/>
+              <span class="text-highlight-teal marginLeft47">circle-giant</span> <b>#</b> change min to 700px by 700px<Br/>
+              <span class="text-highlight-yellow">curved</span> <b>#</b> curve elements borders to 7px<Br/>
+              <span class="text-highlight-yellow">curved-heavy</span> <b>#</b> curve elements borders to 11px<Br/>
+              <span class="text-highlight-yellow">curved-light</span> <b>#</b> curve elements borders to 3px<Br/>
+              <span class="text-highlight-yellow">shadow</span> <b>#</b> simple shadow to give element depth on page<Br/>
           </div>
       </div>
-    <div class="row marginTop10">
-      <div class="col-xs-6">
-
-      </div>
-      <div class="col-xs-6">
-        
-      </div>
-    </div>
   </div>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
