--- a/app/index.html
+++ b/app/index.html
@@ -386,7 +386,7 @@
     </div>
     <div class="row marginTop10 paddingRight20">
       <div class="col-xs-12">
-        Coming soon...
+        <button class="btn">btn</button>
       </div>
     </div>
 <!-- Hover Animations -->
@@ -469,34 +469,84 @@
       </div>
     </div>
     <div class="col-xs-3  marginTop20">
-          <div class="marginTop50 code-block-alt">
-           &lt;div class="<b>slide-far<br/>hover-slide-left</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;Slide Far(left)<br/>&lt;/div&gt;
-          </div>
-        </div>
-        <div class="col-xs-1 marginTop50 text-size30 text-bold text-center">
-          <div class="marginTop50">></div>
-        </div>
-        <div class="col-xs-8 ">
-          <div class="row marginTop20">
-            <div class="col-xs-12 lineHeight150">
-              <span class="text-highlight-yellow">square</span> <b>#</b> enable element to take square-ish shape. by default min 75px by 75px<Br/>
-              <span class="text-highlight-teal marginLeft47">square-smallest</span> <b>#</b> change min to 50px by 50px<Br/>
-              <span class="text-highlight-teal marginLeft47">square-small</span> <b>#</b> change min to 100px by 100px<Br/>
-              <span class="text-highlight-teal marginLeft47">square-medium</span> <b>#</b> change min to 250px by 250px<Br/>
-              <span class="text-highlight-teal marginLeft47">square-large</span> <b>#</b> change min to 400px by 400px<Br/>
-              <span class="text-highlight-teal marginLeft47">square-giant</span> <b>#</b> change min to 700px by 700px<Br/>
-              <span class="text-highlight-yellow">circle</span> <b>#</b> enable element to take circle-ish shape. by default min 33px by 33px<Br/>
-              <span class="text-highlight-teal marginLeft47">circle-smallest</span> <b>#</b> change min to 50px by 50px<Br/>
-              <span class="text-highlight-teal marginLeft47">circle-small</span> <b>#</b> change min to 100px by 100px<Br/>
-              <span class="text-highlight-teal marginLeft47">circle-medium</span> <b>#</b> change min to 250px by 250px<Br/>
-              <span class="text-highlight-teal marginLeft47">circle-large</span> <b>#</b> change min to 400px by 400px<Br/>
-              <span class="text-highlight-teal marginLeft47">circle-giant</span> <b>#</b> change min to 700px by 700px<Br/>
-              <span class="text-highlight-yellow">curved</span> <b>#</b> curve elements borders to 7px<Br/>
-              <span class="text-highlight-yellow">curved-heavy</span> <b>#</b> curve elements borders to 11px<Br/>
-              <span class="text-highlight-yellow">curved-light</span> <b>#</b> curve elements borders to 3px<Br/>
-              <span class="text-highlight-yellow">shadow</span> <b>#</b> simple shadow to give element depth on page<Br/>
-          </div>
+      <div class="marginTop50 code-block-alt">
+       &lt;div class="<b>slide-far<br/>hover-slide-left</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;Slide Far(left)<br/>&lt;/div&gt;
       </div>
+    </div>
+    <div class="col-xs-1 marginTop50 text-size30 text-bold text-center">
+      <div class="marginTop50">></div>
+    </div>
+    <div class="col-xs-8 ">
+      <div class="row marginTop20">
+        <div class="col-xs-12 lineHeight150">
+          <span class="text-highlight-yellow">square</span> <b>#</b> enable element to take square-ish shape. by default min 75px by 75px<Br/>
+          <span class="text-highlight-teal marginLeft47">square-smallest</span> <b>#</b> change min to 50px by 50px<Br/>
+          <span class="text-highlight-teal marginLeft47">square-small</span> <b>#</b> change min to 100px by 100px<Br/>
+          <span class="text-highlight-teal marginLeft47">square-medium</span> <b>#</b> change min to 250px by 250px<Br/>
+          <span class="text-highlight-teal marginLeft47">square-large</span> <b>#</b> change min to 400px by 400px<Br/>
+          <span class="text-highlight-teal marginLeft47">square-giant</span> <b>#</b> change min to 700px by 700px<Br/>
+          <span class="text-highlight-yellow">circle</span> <b>#</b> enable element to take circle-ish shape. by default min 33px by 33px<Br/>
+          <span class="text-highlight-teal marginLeft47">circle-smallest</span> <b>#</b> change min to 50px by 50px<Br/>
+          <span class="text-highlight-teal marginLeft47">circle-small</span> <b>#</b> change min to 100px by 100px<Br/>
+          <span class="text-highlight-teal marginLeft47">circle-medium</span> <b>#</b> change min to 250px by 250px<Br/>
+          <span class="text-highlight-teal marginLeft47">circle-large</span> <b>#</b> change min to 400px by 400px<Br/>
+          <span class="text-highlight-teal marginLeft47">circle-giant</span> <b>#</b> change min to 700px by 700px<Br/>
+          <span class="text-highlight-yellow">curved</span> <b>#</b> curve elements borders to 7px<Br/>
+          <span class="text-highlight-yellow">curved-heavy</span> <b>#</b> curve elements borders to 11px<Br/>
+          <span class="text-highlight-yellow">curved-light</span> <b>#</b> curve elements borders to 3px<Br/>
+          <span class="text-highlight-yellow">shadow</span> <b>#</b> simple shadow to give element depth on page<Br/>
+        </div>
+      </div>
+    </div>
+    <div class="row marginTop40">
+      <div class="col-xs-12">
+        <h3 class="text-bold text-underline">Cursor Styles</h3>
+      </div>
+    </div>
+    <div class="row marginTop10 ">
+      <div class="col-xs-12">
+        <button class="marginRight10 btn text-size12 cursor-not-allowed">not-allowed</button>
+        <button class="marginRight10 btn text-size12 cursor-pointer">pointer</button>
+        <button class="marginRight10 btn text-size12 cursor-zoom-in">zoom-in</button>
+        <button class="marginRight10 btn text-size12 cursor-n-resize">n-resize</button>
+        <button class="marginRight10 btn text-size12 cursor-text">text</button>
+        <button class="marginRight10 btn text-size12 cursor-help">help</button>
+        <button class="marginRight10 btn text-size12 cursor-move">move</button>
+        <button class="marginRight10 btn text-size12 cursor-context-menu">context-menu</button>
+        <button class="marginRight10 btn text-size12 cursor-all-scroll">all-scroll</button>
+      </div>
+    </div>
+    <div class="col-xs-3  marginTop20">
+      <div class="marginTop10 code-block-alt">
+       &lt;div class="<b><Br/>cursor-not-allowed</b>"&gt;<br/>&nbsp;&nbsp;&nbsp;not-allowed<br/>&lt;/div&gt;
+      </div>
+    </div>
+    <div class="col-xs-1 marginTop50 text-size30 text-bold text-center">
+      >
+    </div>
+    <div class="col-xs-8 ">
+      <div class="row marginTop40">
+        <div class="col-xs-12 lineHeight150">
+          <span class="text-highlight-yellow">cursor-</span> <b>#</b> prexfix to any of the html cursor styles<br />
+          <span class="text-highlight-teal marginRight10">all-scroll</span>
+          <span class="text-highlight-teal marginRight10">cell</span>
+          <span class="text-highlight-teal marginRight10">context-menu</span>
+          <span class="text-highlight-teal marginRight10">col-resize</span>
+          <span class="text-highlight-teal marginRight10">copy</span>
+          <span class="text-highlight-teal marginRight10">@directional-resize</span>
+          <span class="text-highlight-teal marginRight10">help</span>
+          <span class="text-highlight-teal marginRight10">move</span>
+          <span class="text-highlight-teal marginRight10">no-drop</span>
+          <span class="text-highlight-teal marginRight10">none</span>
+          <span class="text-highlight-teal marginRight10">not-allowed</span>
+          <span class="text-highlight-teal marginRight10">pointer</span>
+          <span class="text-highlight-teal marginRight10">progress</span>
+          <span class="text-highlight-teal marginRight10">text</span>
+          <span class="text-highlight-teal marginRight10">vertical-text</span>
+          <span class="text-highlight-teal marginRight10">zoom-@in/out</span>
+        </div>
+      </div>
+    </div>
   </div>
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
