--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
     <!-- endbuild -->
 
     <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main.min.css">
     <!-- endbuild -->
     
     <!-- build:js scripts/vendor/modernizr.js -->
